adaptacion mobile grid and fix text contacto

--- a/css/style.css
+++ b/css/style.css
@@ -38,8 +38,8 @@ h2{
  }
 
  #web, #clientes, #grafico, #contacto{
-   padding-top: 300px;
-   padding-bottom: 300px;
+   padding-top: 150px;
+   padding-bottom: 150px;
  }
 
 /* PRELOADER */
@@ -257,12 +257,17 @@ h2{
 /*CLIENTES*/
 .clientes{
   text-align: center;
-  background-color: #181616;
   float: left;
   width: 100%;
   padding: 20px;
   color: #D8D200;
-  font-size: 30px;
+  font-size: 30px; 
+  background-color:#000000; 
+  /* background-image: url('../img/customer.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative; */
 }
  
 #grafico{
@@ -278,10 +283,16 @@ h2{
 
 /*CONTACTO*/
 #contacto{
-  background-color:#181616;
+  background-color:#000000;
   float: left;
   width: 100%;
   text-align: center;
+  padding-bottom: 50px;
+  /* background-image: url('../img/customer.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative; */
 
 }
 
@@ -293,8 +304,6 @@ h2{
   text-align: center;
 }
 
-
-
 #contacto .columns-contacto{
   color: white;
 }
@@ -302,6 +311,11 @@ h2{
 .columns-contacto h3{
   font-size: 2em;
   display: inline;
+}
+
+#contacto p{
+  font-size: 1.3rem;
+  margin-top: 100px;
 }
 
 /* Style inputs with type="text", select elements and textareas */
@@ -378,10 +392,9 @@ footer{
   background-color: black;
   float: left;
   color: white;
-  font-weight: bold;
   width: 100%;
-  font-size: 0.8rem;
-  padding: 50px 10px;
+  font-size: 1rem;
+  padding: 30px 10px;
   text-align: center;
 }
 
@@ -450,6 +463,11 @@ footer a{
     }
     .hero-text{
       padding: 100px 20px;
+    }
+    .columns1 {
+      display: grid;
+      grid-template-columns: 1fr;
+      text-align: center;
     }
   }
   @media screen and (min-width: 666px) and (max-width: 1059px) {
